<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="create_user">创建帐号</string>
    <string name="app_name">织图</string>
    <string name="app_name_en">ZHI</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pwd_lost">找回密码</string>
    <string name="textview_text">I Love You</string>
    <string name="button_text">button</string>
    <string name="iphint">输入ip</string>
    <string name="namehint">输入name</string>
    <string name="pshint">输入name</string>
    <string name="login_button">登录</string>
    <string name="register_button">注册</string>
    <string name="details_send">发送</string>
    <string name="ok">确定</string>
    <string name="login_name">用户名</string>
    <string name="comm_input">添加评论</string>
    <string name="ilike">nolike</string>
    <string name="register_username">输入用户名</string>
    <string name="register_usermail">输入邮箱</string>
    <string name="findpwd_tip">我们会将您的密码发送到账号邮箱中</string>
    <string name="login_password">密码</string>
    <string name="register_password">输入密码</string>
    <string name="findpwd">"请输入帐号邮箱"</string>
    <string name="register_password_confirm">再次输入密码</string>
    <string name="find_password">忘记密码？</string>
    <string name="title_activity_find_pwd">FindPwdActivity</string>
    <string name="title_activity_personal">个人空间</string>
    <string name="title_activity_index_page">织图</string>
    <string name="title_activity_my_page">空间</string>
    <string name="title_activity_main_page">织图</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="comment_btn">评论</string>
    <string name="comment_good_btn">赞</string>
    <string name="index_msg_new">最新动态</string>
    <string name="title_activity_register">注册</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="action_settings">grhhjr</string>
    <string name="login_progress_signing_in">Signing in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_send_msg">新动态</string>
    <string name="title_activity_msg_details">MsgDetailsActivity</string>
    <string name="main_home">首页</string>
    <string name="main_comment">评论</string>
    <string name="main_message">私信</string>
    <string name="main_edit">编写</string>
    <string name="main_reload">刷新</string>
    <string name="more">更多</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="str_text">文件操作</string>
    <string name="welcome">请选择媒介：</string>
    <string name="redue">更新确认</string>
    <string name="scan">正在扫描设备中的图片</string>
    <string name="zhitu_name_xxf">织图</string>
    <string name="cancel">取消</string>
    <string name="album_scan">相册浏览</string>
    <string name="no_sdcard">没有插入SD卡</string>
    <string name="no_picture">没有检索到图片信息</string>
    <string name="no_memory">内存不足</string>
    <string name="animation">幻灯片播放</string>
    <string name="stop_anim">停止播放</string>
    <string name="set_effects">图片特效</string>
    <string name="retate">旋转照片</string>
    <string name="thumbnail">缩放图片</string>
    <string name="details">详细信息</string>
    <string name="quite">返回预览</string>
    <string name="setupfor">设定为</string>
    <string name="delete">删除照片</string>
    <string name="switchmodel">幻灯片效果</string>
    <string name="retate_left">逆时针90度旋转</string>
    <string name="retate_right">顺时针90度旋转</string>
    <string name="retate_back">180度旋转照片</string>
    <string name="tolarger">照片放大</string>
    <string name="tosmaller">照片缩小</string>
    <string name="setup_wallpaper">设定为桌面</string>
    <string name="setup_favarete">设定为我最喜爱的照片</string>
    <string name="delete_redue">删除确认</string>
    <string name="delete_redue_question_a">确定要删除照片</string>
    <string name="delete_redue_question_b">吗？ 选择【确定】按钮以删除图片文件。</string>
    <string name="picture_file">照片文件</string>
    <string name="delete_success">删除成功</string>
    <string name="picture_name">照片名称</string>
    <string name="picture_path">所在位置</string>
    <string name="picture_size">照片大小</string>
    <string name="picture_modified_date">修改时间</string>
    <string name="setup_wallpaper_success">桌布设定成功</string>
    <string name="unkonw_err">抱歉，程序出现未知异常</string>
    <string name="picture_count">张照片</string>
    <string name="album">相册</string>
    <string name="path">路径</string>
    <string name="rescan">重新扫描图片</string>
    <string name="internal">本地存储</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="send_btn">发送</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="last_update">上次更新</string>
    <string name="loading">正在加载</string>
    <string name="load_more">加载更多</string>
    <string name="action_personalzhitu">我的织图</string>
    <string name="action_imagescan">本机图片</string>
    <string name="action_edting">图片处理</string>
    <string name="title_activity_personal_center">PersonalCenter</string>
    <string name="title_activity_item_user_info">ItemUserInfoActivity</string>

</resources>
