<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zhitu_bg"
    android:orientation="horizontal"
    android:gravity="right"
    tools:context="com.zhitu.xxf.WelcomeActivity">
   
    <TextView
        android:id="@+id/wel_register_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_user"
        android:textColor="@color/white"
        android:textSize="16sp" />
    
    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:src="@drawable/amsc_ic_menu_divider"/>

    <TextView
        android:id="@+id/wel_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="16sp" />
    
</LinearLayout>

