<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhitu.xxf.RegisterActivity" >

    
    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/register_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/register_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableLeft="@drawable/login_user"
                android:drawablePadding="48dp"
                android:hint="@string/register_username"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/zhitu_cursor"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="20sp" />
            
            <EditText
                android:id="@+id/register_usermail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/login_user_hightlighted"
                android:drawablePadding="48dp"
                android:hint="@string/register_usermail"
                android:inputType="text|textEmailAddress"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/zhitu_cursor"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/resgister_password"
                android:layout_width="match_parent"
                android:textCursorDrawable="@drawable/zhitu_cursor"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/login_key"
                android:drawablePadding="48dp"
                android:hint="@string/register_password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="20sp" />
            
            <EditText
                android:id="@+id/resgister_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/login_key"
                android:drawablePadding="48dp"
                android:hint="@string/register_password_confirm"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/findpwd_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:background="@color/long_button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/register_button"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</merge>
