<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="3dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

   <LinearLayout
        android:id="@+id/details_card_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >
		

        <ImageView
            android:id="@+id/details_head_image"
            android:contentDescription="@string/action_settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/zhitu_logo_no_bg" />

        <LinearLayout
            android:id="@+id/details_card_nametime"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/details_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:clickable="true"
                android:text="@string/action_settings"
                android:textColor="@color/long_button"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/details_time_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:clickable="false"
                android:text="@string/action_settings"
                android:textColor="@color/long_button"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <ImageView
        android:contentDescription="@string/action_settings"
        android:id="@+id/details_content_image"
        android:layout_width="36dp"
        android:layout_height="96dp"
        android:src="@drawable/welcome2" />
         <ImageView
        android:contentDescription="@string/action_settings"
        android:layout_width="36dp"
        android:layout_height="96dp"
        android:src="@drawable/welcome2" />
          <ImageView
        android:contentDescription="@string/action_settings"
        android:layout_width="36dp"
        android:layout_height="96dp"
        android:src="@drawable/welcome2" />
    </LinearLayout>
   
    <TextView
        android:id="@+id/details_content_textview"
        android:layout_marginLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/action_settings"
        android:textColor="@color/text_black"
        android:textSize="16sp" />
    
    <TableLayout 
        android:layout_marginTop="8dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_gray">
        <TextView 
            android:layout_width="0dp"
            android:text="@string/ilike"
            android:id="@+id/detais_ilike_textview"
            android:layout_height="0dp"/>
        
        <TableRow 
            android:background="@color/back_gray"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            
        <ImageView
            android:id="@+id/details_retweet_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/skin_feed_icon_re_disabled" />
       
        <ImageView
            android:id="@+id/details_comment_image"
            android:layout_width="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/skin_feed_icon_comment_disabled" />

        <ImageView
            android:id="@+id/details_like_image"
            android:layout_width="fill_parent"
            android:layout_marginLeft="0.8dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/skin_feed_icon_praise_disabled" />
            
        </TableRow>
        
    </TableLayout>
    
   

</LinearLayout>