<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="3dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <LinearLayout
        android:id="@+id/card_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/head_photo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/zhitu_logo" />

        <LinearLayout
            android:id="@+id/card_top_nametime"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:clickable="true"
                android:text="@string/action_settings"
                android:textColor="@color/long_button"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:clickable="false"
                android:text="@string/action_settings"
                android:textColor="@color/long_button"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/msg_card_centerbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_index"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/welcome2" />

        <ImageView
            android:id="@+id/image_index2"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/welcome2" />

        <ImageView
            android:id="@+id/image_index3"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/welcome2" />
    </LinearLayout>

    <TextView
        android:id="@+id/image_index_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="3dp"
        android:text="@string/action_settings"
        android:textColor="@color/text_black"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/back_gray" >

        <TextView
            android:id="@+id/ilike_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/ilike" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/back_gray"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/msg_retweet_viewgroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/msg_retweet_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/skin_feed_icon_re_disabled" />

                <TextView
                    android:id="@+id/msg_retweet_num_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/app_name"
                    android:textColorHint="@color/back_gray"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/msg_comment_viewgroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/msg_comment_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/skin_feed_icon_comment_disabled" />

                <TextView
                    android:id="@+id/msg_comment_num_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/app_name"
                    android:textColorHint="@color/back_gray"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/msg_like_viewgroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/msg_ilike_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/skin_feed_icon_praise_disabled" />

                <TextView
                    android:id="@+id/msg_like_num_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/app_name"
                    android:textColorHint="@color/back_gray"
                    android:textSize="14sp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>